# Sphere_roaming

./: .gitignore  CITATION.cff  README.md  config.conf  meson.build
data/: fit_potential.txt  singlet_singlet.txt  singlet_triplet.txt  triplet_triplet.txt
src/: h5file.c  h5file.h  main.c  reader.c  simulation.c  simulation.h  vector.c  vector.h
